removed gaps & used margin, fixed header

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -237,10 +237,14 @@ header .wrapper {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  justify-content: space-between;
   -webkit-box-align: center;
   -ms-flex-align: center;
   align-items: center;
-  gap: 4rem;
+}
+
+.logo{
+  width: 20%;
 }
 
 .logo > a {
@@ -265,25 +269,26 @@ header .wrapper {
 }
 
 .header-nav {
+  width: 80%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  justify-content: space-between;
   -webkit-box-align: center;
   -ms-flex-align: center;
   align-items: center;
-  gap: 8rem;
   transition: all 0.3s;
 }
 
 .header-nav-links {
-  width: max-content;
+  width: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  justify-content: space-evenly;
   -webkit-box-align: center;
   -ms-flex-align: center;
   align-items: center;
-  gap: 3.5rem;
   transition: all 0.3s;
 }
 
@@ -331,10 +336,11 @@ header .wrapper {
 }
 
 .cart-search {
+  width: 10%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  gap: 2.25rem;
+  justify-content: space-between;
 }
 
 .cart-search a {
@@ -396,7 +402,6 @@ header .wrapper {
   -webkit-box-align: center;
   -ms-flex-align: center;
   align-items: center;
-  gap: 4rem;
 }
 
 .sub-header a:hover {
@@ -405,6 +410,14 @@ header .wrapper {
 
 .sub-header .dropdown-container a:hover::after {
   color: #e9e9ea;
+}
+
+.sub-logo{
+  width: 20%;
+}
+
+.sub-header-nav{
+  width: 48%;
 }
 
 .sub-logo > a {
@@ -457,7 +470,6 @@ banner section styling starts here
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  gap: 20px;
   position: absolute;
   right: 0;
   background-color: #000;
@@ -465,6 +477,10 @@ banner section styling starts here
 
 .sales-box a {
   color: #fff;
+}
+
+.sales-phone{
+  margin-right: 20px;
 }
 
 .sales-phone,
@@ -588,11 +604,10 @@ digital section styling starts here
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  /* flex-wrap: wrap; */
-  gap: 5.75%;
 }
 
 .digital-description {
+  margin-right: 5.75%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -600,11 +615,11 @@ digital section styling starts here
   -webkit-box-direction: normal;
   -ms-flex-direction: column;
   flex-direction: column;
-  gap: 26px;
 }
 
 .digital-para {
   max-width: 57.75%;
+  margin: 26px 0;
   color: #2d2d31;
   font-size: 14px;
   word-wrap: break-word;
@@ -677,11 +692,11 @@ product section styling starts here
   -webkit-box-direction: normal;
   -ms-flex-direction: column;
   flex-direction: column;
-  gap: 28px;
 }
 
 .product-description-para {
   max-width: 80%;
+  margin: 28px 0;
 }
 
 .product-link {
@@ -750,11 +765,11 @@ resources section styling starts here
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  gap: 16%;
 }
 
 .resource-detail {
   max-width: 40%;
+  margin-right: 16%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -762,25 +777,23 @@ resources section styling starts here
   -webkit-box-direction: normal;
   -ms-flex-direction: column;
   flex-direction: column;
-  gap: 26px;
-}
-
-.resource-detail:first-child {
-  gap: 22px;
 }
 
 .resource-blogger {
+  margin-top: 22px;
   color: #2d2f32;
   font-size: 16px;
 }
 
 .resource-date,
 .resource-para {
+  margin-top: 26px;
   color: #2d2d31;
   font-size: 14px;
 }
 
 .resource-link {
+  margin-top: 26px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -860,17 +873,21 @@ resources section styling ends here
   -webkit-box-align: center;
   -ms-flex-align: center;
   align-items: center;
-  gap: 22px;
 }
 
 .footer-icon-container {
   min-width: 50%;
+  margin-bottom: 22px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: center;
   -ms-flex-align: center;
   align-items: center;
+}
+
+.footer-icon-container:last-child{
+  margin: 0;
 }
 
 .footer-icon-container > a {
@@ -918,8 +935,11 @@ resources section styling ends here
   -webkit-box-pack: center;
   -ms-flex-pack: center;
   justify-content: center;
-  gap: 22px;
   background-color: #13204a;
+}
+
+.sales-container{
+  margin-bottom: 22px;
 }
 
 .sales-container,
@@ -957,11 +977,11 @@ resources section styling ends here
   -webkit-box-pack: center;
   -ms-flex-pack: center;
   justify-content: center;
-  gap: 14px;
   background-color: #524d53;
 }
 
 .footer-mid span {
+  margin-right: 14px;
   color: #e9e9ea;
   font-weight: 600;
 }
@@ -1038,7 +1058,13 @@ resources section styling ends here
   -webkit-box-direction: normal;
   -ms-flex-direction: column;
   flex-direction: column;
-  gap: 24px;
+}
+
+.blog-links > li{
+  margin-bottom: 24px;
+}
+.blog-links > li:last-child{
+  margin: 0;
 }
 
 .blog-links a {
@@ -1090,7 +1116,13 @@ resources section styling ends here
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  gap: 30px;
+}
+
+.footer-nav-links > ul > li{
+  margin-right: 30px;
+}
+.footer-nav-links > ul > li:last-child{
+  margin: 0;
 }
 
 .footer-nav-links a {
@@ -1135,16 +1167,11 @@ resources section styling ends here
   .main-header {
     align-items: flex-start;
     justify-content: space-between;
-    gap: unset;
   }
 
   .header-nav,
   .sub-header {
     align-items: flex-start;
-  }
-
-  .header-nav {
-    gap: 4rem;
   }
 
   .sub-header {
@@ -1154,6 +1181,10 @@ resources section styling ends here
   .header-nav-links {
     flex-direction: column;
     align-items: flex-start;
+  }
+  
+  .cart-search{
+    margin-right: 10px;
   }
 
   .header-nav-links {
@@ -1179,16 +1210,29 @@ resources section styling ends here
 
   .footer-container {
     flex-direction: column;
-    gap: 26px;
+  }
+
+  .footer-container > li{
+    margin-bottom: 26px;
+  }
+  .footer-container > li:last-child{
+    margin: 0;
   }
 
   .footer-nav {
     flex-direction: column;
-    gap: 12px;
+  }
+  
+  .footer-nav-links > ul {
+    margin-top: 12px;
+    flex-direction: column;
   }
 
-  .footer-nav-links > ul {
-    flex-direction: column;
+  .footer-nav-links > ul > li{
+    margin-bottom: 30px;
+  }
+  .footer-nav-links > ul > li:last-child{
+    margin: 0;
   }
 }
 
@@ -1295,7 +1339,10 @@ resources section styling ends here
   .digital-description-image {
     flex-direction: column;
     flex-wrap: wrap;
-    gap: 10px;
+  }
+
+  .digital-description{
+    margin-bottom: 10px;
   }
 }
 
@@ -1305,16 +1352,13 @@ resources section styling ends here
     font-size: 10px;
   }
 
-  .main-header {
-    gap: 2rem;
+  .logo{
+    margin-right: 10%;
   }
 
-  .header-nav {
-    gap: 2rem;
-  }
-
-  .banner-top .wrapper {
-    gap: 10px;
+  .cart-search{
+    width: 40%;
+    margin-right: 10%;
   }
 
   .sales-box a {
@@ -1346,7 +1390,10 @@ resources section styling ends here
   .resources-container {
     flex-direction: column;
     flex-wrap: wrap;
-    gap: 10px;
+  }
+
+  .resource-detail{
+    margin-bottom: 10px;
   }
 
   .digital-para,
@@ -1372,11 +1419,6 @@ resources section styling ends here
 
 /*media query for 375px starts here*/
 @media only screen and (max-width: 375px) {
-  .header-nav,
-  .cart-search {
-    gap: 1rem;
-  }
-
   .logo > a,
   .sub-logo > a {
     font-size: 12px;
@@ -1387,6 +1429,7 @@ resources section styling ends here
   }
 
   .sales-box {
+    margin-top: 10px;
     position: unset;
   }
 }
